--- a/src/styles/docArticle.css
+++ b/src/styles/docArticle.css
@@ -53,6 +53,10 @@ p {
   font-size: 1.2em;
 }
 
+ul {
+  font-size: 1.2em;
+}
+
 li p {
   margin-bottom: 0.7em;
 }
@@ -73,9 +77,7 @@ h2 {
   font-weight: bold;
   font-size: 2.5em;
   padding-bottom: 0.1em;
-  border-bottom-width: 2px;
-  border-bottom-style: solid;
-  border-bottom-color: lightgray;
+  border-top: 2px solid lightgray;
   margin-bottom: 0.5em;
 }
 
