--- a/src/styles/docArticle.css
+++ b/src/styles/docArticle.css
@@ -1,10 +1,11 @@
 .doc-article {
   font-family:  "Segoe WPC", "Segoe UI", system-ui, "Ubuntu", "Droid Sans", sans-serif;
-  line-height: 1.6em;
+  line-height: 1.4em;
+  font-size: 1.2em;
 }
 
 ul {
-  padding-left: 1em;
+  padding-left: 1.6em;
 }
 
 a {
@@ -19,7 +20,7 @@ a:visited {
 
 a.header-anchor {
   color: #00000050;
-  font-size: 0.8em;
+  font-size: 0.6em;
 }
 
 a.header-anchor:hover {
@@ -40,6 +41,10 @@ ol ol:first-child {
   margin-bottom: 0;
 }
 
+ul, ol {
+  margin-bottom: 0.7em;
+}
+
 img {
   max-width: 100%;
   max-height: 100%;
@@ -49,20 +54,8 @@ img {
 }
 
 p {
-  margin-bottom: 0.9em;
-  font-size: 1.2em;
-}
-
-ul {
-  font-size: 1.2em;
-}
-
-li p {
-  margin-bottom: 0.7em;
-}
-
-ul, ol {
-  margin-bottom: 0.7em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 h1 { border-color: #b0b0b0;
