--- a/src/styles/docArticle.css
+++ b/src/styles/docArticle.css
@@ -1,3 +1,5 @@
+/* TODO : scroll-bar verticale sur les blocs de code (si j'y arrive). */
+
 .doc-article {
   font-family:  "Segoe WPC", "Segoe UI", system-ui, "Ubuntu", "Droid Sans", sans-serif;
   line-height: 1.4em;
@@ -114,7 +116,7 @@ code {
   font-size: 1em;
   line-height: 1.6em;
   background: #303030;
-  padding: 0.3em;
+  padding: 0.1em 0.3em 0.1em 0.3em;
   color: #f0f0f0;
 }
 
